--- a/client/src/components/WhyUs/WhyUs.scss
+++ b/client/src/components/WhyUs/WhyUs.scss
@@ -6,9 +6,10 @@
   justify-content: center;
   align-items: center;
   box-shadow: 0px 2px 10px rgb(0, 0, 0, 0.1);
-  padding: $space-x-small;
+  padding: $space-medium $space-x-small;
   @include border-radius;
   @include layout-constrain;
+  margin: $space-large auto;
 
   @include tablet {
     padding: $space-large;
@@ -19,10 +20,11 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 2.4rem;
+  gap: $space-medium;
 
   @include tablet {
     flex-direction: row;
     flex-wrap: wrap;
+    gap: $space-large;
   }
 }
