--- a/client/src/components/WhyUs/WhyUsCard.scss
+++ b/client/src/components/WhyUs/WhyUsCard.scss
@@ -5,19 +5,48 @@
   &-card {
     width: 100%;
     display: flex;
-    gap: 1.6rem;
+    gap: $space-medium;
+    align-items: flex-start;
+    padding: $space-x-small 0;
+    border-bottom: 1px solid #f3f4f6;
 
     @include tablet {
       width: calc((100% - $space-large) / 2);
+      border-bottom: none;
+      padding: 0;
     }
   }
+
   &-icon {
-    width: 4rem;
-    height: 4rem;
+    width: 4.4rem;
+    height: 4.4rem;
+    flex-shrink: 0;
   }
+
   &-text {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.6rem;
+  }
+
+  &-title {
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: $charcoal;
+    line-height: 1.3;
+
+    @include tablet {
+      font-size: 1.6rem;
+    }
+  }
+
+  &-desc {
+    font-size: 1.3rem;
+    color: #6b7280;
+    line-height: 1.6;
+
+    @include tablet {
+      font-size: 1.4rem;
+    }
   }
 }
